--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@ kotlin.code.style=official
 
 version=1.3.0-SNAPSHOT
 
-version.kotlin=1.6.10
+version.kotlin=2.0.0
+version.versions.plugin=0.51.0
 
-version.jackson=2.13.1
-version.jsonassert=1.5.0
+version.jackson=2.17.1
+version.jsonassert=1.5.2
